# WISEAgent

./: Makefile  Makefile.am  Makefile.common  README.md  WISEAgent.sln  WISEAgentV15.sln  build-wiseagent.sh  common_config.mk  common_rule.mk  common_version.mk  configure.ac  license  pre-install_centos.sh  pre-install_ubuntu.sh
Doc/: README  license
Include/: susiaccess_def.h  susiaccess_handler_api.h  susiaccess_handler_ex_api.h  susiaccess_handler_mgmt.h  svnversion.h
Library3rdParty/libmodbus-3.1.2/: Makefile  Makefile.in  config.h  config.h.in  config.status  configure  configure.ac  libmodbus.pc  libtool
Library3rdParty/libmodbus-3.1.2/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
Library3rdParty/libmodbus-3.1.2/doc/: Makefile.in
Library3rdParty/libmodbus-3.1.2/src/: Makefile.in  config.h
Library3rdParty/libmodbus-3.1.2/tests/: Makefile.in
Library3rdParty/libxml2-2.7.8/: Makefile  config.h  config.status  libtool  libxml2.spec
Library3rdParty/libxml2-2.7.8/.deps/: DOCBparser.Plo  HTMLparser.Plo  HTMLtree.Plo  SAX.Plo  SAX2.Plo  c14n.Plo  catalog.Plo  chvalid.Plo  debugXML.Plo  dict.Plo  encoding.Plo  entities.Plo  error.Plo  globals.Plo  hash.Plo  legacy.Plo  list.Plo  nanoftp.Plo  nanohttp.Plo  parser.Plo  parser.Tpo  parserInternals.Plo  pattern.Plo  relaxng.Plo  runsuite.Po  runtest.Po  runxmlconf.Po  schematron.Plo  testAutomata.Po  testC14N.Po  testHTML.Po  testModule.Po  testReader.Po  testRegexp.Po  testRelax.Po  testSAX.Po  testSchemas.Po  testThreads.Po  testURI.Po  testXPath.Po  (+26 more)
Library3rdParty/libxml2-2.7.8/doc/: Makefile
Library3rdParty/libxml2-2.7.8/doc/devhelp/: Makefile
Library3rdParty/libxml2-2.7.8/doc/examples/: Makefile
Library3rdParty/libxml2-2.7.8/example/: Makefile
Library3rdParty/libxml2-2.7.8/example/.deps/: gjobread.Po
Library3rdParty/libxml2-2.7.8/include/: Makefile
Library3rdParty/libxml2-2.7.8/include/libxml/: Makefile
Library3rdParty/libxml2-2.7.8/python/: Makefile
Library3rdParty/libxml2-2.7.8/python/tests/: Makefile
Library3rdParty/libxml2-2.7.8/xstc/: Makefile
Library3rdParty/log4z-3.2.0/: Android.mk  Makefile  Makefile.am
Library3rdParty/log4z-3.2.0/test/: advanced_test.vcproj  fast_test.vcproj
Library3rdParty/log4z-3.2.0/vc2015/: log4z.vcxproj
Library3rdParty/mosquitto-1.3.4/: config.h  config.mk  mosquitto.conf
Library3rdParty/mosquitto-1.3.4/lib/: net_mosq.h  thread_mosq.c  time_mosq.c  tls_mosq.c
Library3rdParty/mosquitto-1.3.4/man/: mosquitto.conf.5
Library3rdParty/mosquitto-1.3.4/win32/: ALL_BUILD.vcproj  CMakeCache.txt  INSTALL.vcproj  ZERO_CHECK.vcproj  cmake_install.cmake  install_manifest.txt  mosquitto.sln
Library3rdParty/mosquitto-1.3.4/win32/client/: INSTALL.vcproj  cmake_install.cmake  mosquitto_pub.vcproj  mosquitto_sub.vcproj
Library3rdParty/mosquitto-1.3.4/win32/lib/: INSTALL.vcproj  cmake_install.cmake  libmosquitto.vcproj  libmosquitto.vcxproj  libmosquitto.vcxproj.filters
Library3rdParty/mosquitto-1.3.4/win32/man/: INSTALL.vcproj  cmake_install.cmake
Library3rdParty/mosquitto-1.3.4/win32/mosquitto/: mosquitto.lib  mosquittopp.lib
Library3rdParty/mosquitto-1.3.4/win32/src/: INSTALL.vcproj  cmake_install.cmake  mosquitto.vcproj  (+1 more)
Library3rdParty/openssl-1.0.1h/: Makefile  libcrypto.pc  libssl.pc  openssl.pc
Library3rdParty/openssl-1.0.1h.win32/lib/: libeay32.lib  ssleay32.lib
Library3rdParty/openssl-1.0.1h/apps/: openssl
Library3rdParty/openssl-1.0.1h/crypto/: buildinf.h  opensslconf.h
Library3rdParty/openssl-1.0.1h/test/: asn1test  bftest  bntest  casttest  destest  dhtest  dsatest  dummytest  ecdhtest  ecdsatest  ectest  enginetest  evp_test  exptest  heartbeat_test  hmactest  ideatest  igetest  jpaketest  md2test  md4test  md5test  mdc2test  randtest  rc2test  rc4test  rc5test  rmdtest  rsa_test  sha1test  sha256t  sha512t  shatest  srptest  ssltest  wp_test
Platform/: AdvPlatform.h  Android.mk  basequeue.c  basequeue.h
Platform/Linux/: IPCCommData.h  NamedPipeClient.c  NamedPipeClient.h  NamedPipeServer.c  NamedPipeServer.h  binding.h  common.c  common.h  network.c  network.h  platform.c  platform.h  service.c  service.h  util_libloader.c  util_libloader.h  util_os.c  util_os.h  util_path.c  util_path.h  util_process.c  util_process.h  util_string.c  util_string.h  wrapper.h
Platform/Windows/: NamedPipeClient.c  NamedPipeClient.h  NamedPipeServer.c  NamedPipeServer.h  binding.h  common.c  common.h  dlfcn.c  dlfcn.h  network.c  network.h  platform.c  platform.h  pthread.c  pthread.h  service.c  service.h  stdbool.h  stdint.h  unistd.h  util_libloader.c  util_libloader.h  util_os.c  util_os.h  util_path.c  util_path.h  util_process.c  util_process.h  util_string.c  util_string.h  wrapper.h
Platform/Windows/sys/: socket.h  time.cpp  time.h
Sample/HandlerSample/: HandlerSample.vcproj  HandlerSample.vcxproj  HandlerSample.vcxproj.filters  Makefile  Makefile.am  export.def  handler_api.c  module_config.xml
Sample/ModbusSample/: Makefile  Makefile.am  ModbusSample.ini  ModbusSample.rc  ModbusSample.vcproj  ModbusSample.vcxproj  Modbus_Handler.cpp  Modbus_Handler.h  Modbus_HandlerLog.h  Modbus_Parser.c  Modbus_Parser.h  exports.def  module_config.xml  resource.h
Sample/Modbus_Handler/: Makefile  Modbus_Handler.cpp  Modbus_Handler.h  Modbus_Handler.ini  Modbus_Handler.rc  Modbus_Handler.vcproj  Modbus_Handler.vcxproj  Modbus_Parser.c  Modbus_Parser.h  module_config.xml
Sample/SampleAgent/: Android.mk  Makefile  Makefile-org  Makefile.am  SampleAgent.vcproj  SampleAgent.vcxproj  SampleAgent.vcxproj.filters  agentlog.h  sampleagent.c  version.h
Sample/SampleClient/: ReadMe.txt  SampleClient.cpp  SampleClient.vcproj  SampleClient.vcxproj  SampleClient.vcxproj.filters  stdafx.cpp  stdafx.h
Sample/SampleHandler/: ReadMe.txt  SampleHandler.cpp  SampleHandler.vcproj  SampleHandler.vcxproj  SampleHandler.vcxproj.filters  exports.def  module_config.xml  stdafx.cpp  stdafx.h
Sample/SampleVirtualHandler/: SampleVirtualHandler.cpp  SampleVirtualHandler.h  SampleVirtualHandler.vcproj  exports.def
(+30 files in other folders)
