SUBDIRS = Library/Log \
	  Library/cJSON \
	  Library/DES \
	  Library/Base64 \
	  Library/MQTTHelper \
	  Library/SAClient \
	  Library/SAConfig \
	  Library/FtpHelper \
	  Library/MD5 \
	  Library/SAManager \
	  Library/SAHandlerLoader \
	  Library/SAGeneralHandler \
	  Library/MessageGenerator \
	  Sample/HandlerSample \
	  Sample/SampleAgent
	  
ACLOCAL_AMFLAGS = -I m4
